- BUG: If the "X"-Button of the progress window was
       pressed twice the window just hang. (Stefan)
- BUG: The external merge program was started
       with the filenames only instead of the
       full filepaths. (Stefan)
- BUG: The status cache wasn't thread-safe and
       also not process-safe. Thanks to Luebbe
       for reminding me. (Stefan)
- CHG: The context menu is disabled for ".svn"
       directories. (Stefan)
- ADD: Branch/Tag is available for single files
       too, not just folders. (Stefan)
- ADD: Several new commands for the repository
       browser. Also a new command in the context
       menu to start the repo browser. (Stefan)
- ADD: If a conflict occurs during an update/merge
       operation you can now just doubleclick on
       the conflicted entry to start the external
       merge program. (Stefan)
- ADD: New option to close the progress window
       automatically after the command is
       finished. (Stefan)
- ADD: Import dialog got a "select/deselect all"
       button. (Stefan)
- ADD: TortoisePlink (SSH-Client) and settings entry
       for the SVN_SSH variable. (Stefan)
       
Version 0.19
- BUG: The conflicted files weren't always determined
       correctly. (Stefan)
- BUG: The settings page for the menu layout set the
       settings to the default values if the page
       wasn't selected. (Dimentiy)
- BUG: File-entries in the log dialog could not be
       selected if the message contained more than
       three lines. (Stefan)
- BUG: Issue 67: Show Log + Escape = crash. fixed. (Stefan)
- BUG: There was a memory leak which made explorer use
       a huge amount of RAM over time. (Stefan)
- BUG: The cache timeout wasn't calculated correctly.
       This lead to wrong icon overlays and needed
       several "F5" to get the right ones. (Stefan)
- CHG: The "rename" command now uses the --force option
       by default so that modified files can be renamed
       too. (Stefan)